# pyszg

./: .gitignore  LICENSE  README.md  pyproject.toml
.kiro/specs/ha-standards-alignment/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
examples/: basic_usage.py  cloud_login.py  cloud_push_demo.py  cloud_usage.py  dump_state.py  get_pin.py  push_demo.py
src/pyszg/: __init__.py  appliance.py  client.py  cloud_auth.py  cloud_client.py  cloud_const.py  cloud_signalr.py  connection.py  exceptions.py
tests/: test_appliance.py  test_client.py  test_cloud_auth.py  test_cloud_client.py  test_cloud_signalr.py  test_connection.py  test_exceptions.py  test_token_store.py
