[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyszg"
version = "0.1.1"
description = "Local API client for Sub-Zero Group (Sub-Zero, Wolf, Cove) connected appliances"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["websockets>=12.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
